# hua_news_ai_rag

./: .gitignore  INSTALLATION.md  PROJECT_STATUS.md  README.md  README_EN.md  README_INSTALL.md  data_collection_technical_doc.md  install.py  main.py  openapi.yaml  product.prd  product_requirements_document.md  pyproject.toml  re.prd
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git.bak/filter-repo/: commit-map  first-changed-commits  ref-map
.git.bak/info/: refs
backend/: README_USER_MANAGEMENT.md  README_WEB_SEARCH.md  WEB_SEARCH_SETUP.md  __init__.py  app.py  config.py  db.py  embeddings.py  enrich.py  fetcher.py  fix_imports.py  ingest.py  ingest_utils.py  models.py  qa.py  run.py  test_email_settings.py  test_email_settings_extended.py  test_rss.py  vectorstore.py
backend/ai/: __init__.py  qa.py  vectorstore.py
backend/core/: __init__.py  app.py
backend/crawler/: __init__.py  fetcher.py  ingest.py  ingest_utils.py
db/: init_database.sql  schema.sql  seed.sql  user_management_schema.sql
doc/: backend_api.md  business_flows.md  product_design_document.md  system_architecture_code_and_config.md  system_architecture_document.md  ui_components_inventory.md  user_management_design.md
frontend/: SIMPLIFIED_IMPLEMENTATION_SUMMARY.md  SIMPLIFIED_USER_MANAGEMENT_PLAN.md  jest.config.js  junit.xml  middleware.ts  package-lock.json  package.json  tsconfig.json
prototype/: app.js  index.html  styles.css
scripts/: init_database.py  setup_backend.py  setup_frontend.py
tests/: api.http  api_test_report.md  smoke_test.py
(+97 files in other folders)
